# hexagons

./: .gitignore  CMakeLists.txt  README.md  helpful_links.txt
src/: main.cc
src/algo/: life.cc  life.h
src/geo/: drawable.cc  drawable.h  hexagon.cc  hexagon.h
src/hex/: axial_grid.cc  axial_grid.h  constants.h  coords.h  drawable.cc  drawable.h  hexagon.cc  hexagon.h  util.cc  util.h
src/mgl/: attribute.cc  attribute.h  buffer.h  call.cc  call.h  includes.h  mgl.h  program.cc  program.h  shader.cc  shader.h  vertex_attribute.h
src/util/: managed.h  noncopyable.h
